# SimpleUuid

./: .gitignore  CMakeLists.txt  WORKSPACE  readme.md  vcpkg.json
SimpleUuid/: BUILD  CMakeLists.txt  Uuid.cpp
SimpleUuid/src/: TimestampHandler.cpp  Uuid.cpp
cmake/: SimpleUuidConfig.cmake.in
test/: BUILD  CMakeLists.txt  main.cpp
uuid/: CMakeLists.txt  TimestampHandler.cpp  TimestampHandler.h  Uuid.h
